--- a/rag-pdf.ipynb
+++ b/rag-pdf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -18,26 +18,33 @@
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "\n",
     "pdf_files = [\"documents/pruebaLLM.pdf\",\"documents/pruebaLLM2.pdf\", \"documents/MartinScorsese.pdf\"]  # Agrega la lista de archivos PDF\n",
-    "# pdf_files = [\"documents/pruebaLLM2.pdf\"]  # Agrega la lista de archivos PDF\n",
     "\n",
     "all_documents = []\n",
     "\n",
     "for document in pdf_files:\n",
-    "    loader = PyPDFLoader(document)\n",
+    "    loader = PyPDFLoader(document) # Carga el documento\n",
     "    data = loader.load()\n",
-    "    text_splitter = RecursiveCharacterTextSplitter(chunk_size=400, chunk_overlap=20)    # Split the data into chunks\n",
+    "    text_splitter = RecursiveCharacterTextSplitter(chunk_size=400, chunk_overlap=20)    # Divide el texto en chunks\n",
     "    documents = text_splitter.split_documents(data)\n",
     "    all_documents.extend(documents)\n",
     "\n",
-    "print(f\"Se cargaron y dividieron {len(all_documents)} fragmentos de texto.\")\n",
-    "\n"
+    "print(f\"Se cargaron y dividieron {len(all_documents)} fragmentos de texto.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/martin/miniconda3/envs/rag/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_huggingface import HuggingFaceEmbeddings\n",
     "\n",
@@ -46,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,29 +102,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "10"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "question = \"Como es la filmografia de Martin Scorsese\"\n",
-    "docs = vector_store.similarity_search(question)\n",
+    "docs = vector_store.similarity_search(question, k=10)\n",
     "len(docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +133,7 @@
        "Document(metadata={'page': 21, 'source': 'documents/MartinScorsese.pdf'}, page_content='500. Paris, 1996.\\nMarino, Giuseppe Cario. Historiade laMafia. Barcelona: Ediciones B, 2002.\\nMillas, Jorge. LaViolenciay sus Máscaras. Santiago: Aconcagua, 1976.\\nRuiz, Raúl. PoéticaDel Cine. Santiago: Sudamericana, 2000.\\nScorsese, Martínyotros. APersonalJourneyWithMartínScorseseThroughAmericanMovie.\\nLondon: Akal, 1997.\\nScorsese, Martínyotros. Conversaciones con Scorsese. Madrid: Plot, 1987.')"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'La respuesta a la pregunta es:\\n\\n- Película favorita de Juan: \"Mulholland Drive\"\\n- Color favorito de Juan: Amarillo'"
+       "\"La respuesta a la pregunta es:\\n\\n* Película favorita de Juan: 'Mulholland Drive'\\n* Color favorito de Juan: Amarillo\\n* Color que Juan odia: Verde\""
       ]
      },
-     "execution_count": 65,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,16 +196,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Martin Scorsese es un cineasta conocido.'"
+       "'Según el contexto proporcionado, Martin Scorsese es un cineasta conocido. También se mencionan varios libros y artículos relacionados con él, como \"APersonalJourneyWithMartínScorseseThroughAmericanMovie\" y \"Conversaciones con Scorsese\". Además, se hace referencia a películas de él, como \"Mean Streets\", que parece ser una película en la que también actúa.'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,16 +216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'La violencia tiene una relación profunda y central en las películas de Martin Scorsese. Según el texto, la violencia es un aspecto inherente al hombre y a la sociedad, que aparece en muchas de sus obras, como en \"Mean Streets\", \"Casino\" (1995) entre otras. La violencia es presentada como una forma de vida, una opción creativa que se explora en las películas de Scorsese.\\n\\nEn este sentido, la violencia no solo se muestra en la acción física o en los conflictos, sino que también se refleja en la psicología y el comportamiento de los personajes. La violencia es un tema que se aborda de manera sutil y elíptica, lo que le da un carácter trágico y profundo.\\n\\nEn resumen, la violencia es una constante en las películas de Martin Scorsese, y se considera un aspecto fundamental de su estilo y visión artística.'"
+       "'La violencia es un tema central en las películas de Martin Scorsese, y parece que es una forma de expresión creativa y de exploración del ser humano. Según el texto, la violencia se presenta en diferentes formas en sus obras, como en \"Mean Streets\", donde se muestra como una parte inherente a la vida, y también en películas como \"Casino\" (1995), donde es un tema físico y psicológico.\\n\\nEn general, parece que Scorsese no aborda la violencia de manera didáctica o moralizante, sino que la presenta como una forma de expresión artística y de exploración del ser humano. La violencia también se relaciona con el sentido trágico de la vida y se presenta de manera sutil y elíptica.\\n\\nEn resumen, la violencia en las películas de Scorsese parece ser un tema complejo y multifacético que se relaciona con la expresión creativa, la exploración del ser humano y el sentido trágico de la vida.'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,22 +236,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Según el contexto proporcionado, \"Goodfellas\" es un film dirigido por Martin Scorsese que explora la evocación de la elegancia del gángster en la tradición del cine de género. El filme está basado en la vida real de Henry Hill, quien se convirtió en un testigo estrella para las autoridades después de ser capturado y confesar sus crímenes.\\n\\nEn el contexto del documental \"AFI\\'S 100 Years... Loomovies\" realizado por Scorsese en 1998, se menciona que el film está dentro de la tradición del cine negro norteamericano, caracterizado por la puesta en escena de un universo de gángsters y delincuentes.\\n\\nEl filme también parece estar relacionado con otras obras de Scorsese, como \"Mean Streets\" (1973), \"Casino\" (1995) y \"Raging Bully\", que comparten una estructura y una disposición similar. Además, se menciona la circularidad en las escenas del film, que también se repite en otras películas de Scorsese.\\n\\nEn resumen, \"Goodfellas\" parece ser un filme dirigido por Martin Scorsese que explora la vida de un gángster y su desplazamiento hacia el lado correcto de la ley. El filme está dentro de la tradición del cine negro norteamericano y comparte una estructura y una disposición similar con otras obras de Scorsese.'"
+       "'En el documento, hay información sobre la película \"Goodfellas\" dirigida por Martin Scorsese. Se mencionan varias cosas:\\n\\n* La película es una evocación de la elegancia del gángster en la tradición del cine de género.\\n* El protagonista, Charlie, convoca a un grupo que incluye a Michael y otros personajes.\\n* La fiesta está determinada por ambigüedades perturbadoras.\\n* Se menciona la relación entre Charlie y su padre, quien es un gángster y le enseña \"enseñanzas de Paul Cicero\".\\n* También se habla sobre la autodestrucción de Henry Hill, el protagonista principal del film, y Ginger McKercher.\\n* La película explora la moralidad gangsteril y cómo los personajes están atrapados en su mundo criminal.\\n\\nAdemás, se mencionan otros films de Martin Scorsese, como \"Casino\" y \"Raging Bully\", y cómo las estructuras narrativas de estas películas están relacionadas con \"Goodfellas\".'"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chain.invoke(\"Háblame de Goodfellas\")"
+    "chain.invoke(\"Que hay en el documento sobre Goodfellas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'El documento \"La violencia como opción creativa en la obra de Martin Scorsese\" analiza la violencia como un elemento fundamental en la cinematografía de Martin Scorsese. El autor argumenta que la violencia es una forma de expresión creativa y poética, que se puede encontrar en muchos de sus filmes.\\n\\nSegún el documento, Scorsese define la violencia como \"esencial\" en su obra y lo utiliza para explorar temas morales y filosóficos. El autor menciona específicamente cómo Scorsese aborda la violencia en películas como \"Mean Streets\" y \"Taxi Driver\", destacando la importancia de las relaciones con otros autores, como Fellini.\\n\\nEl documento también destaca la presencia de un fatalismo siciliano en la obra de Scorsese, que se refleja en su uso de la violencia para expresar un sentido de desesperanza y moralidad. Sin embargo, el autor sostiene que Scorsese ofrece una consecuencia moral a la violencia, explorándola de manera poética y creativa.\\n\\nEn general, el documento presenta una visión compleja y matizada de la violencia en la obra de Martin Scorsese, destacando su importancia como elemento creativo y su capacidad para expresar temas profundos y universales.'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke(\"Resume el documento 'LA VIOLENCIA COMO OPCIÓN CREATIVA EN LA OBRA DE MARTÍN SCORSESE'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'La mafia parece ser un tema central en las películas de Scorsese, como se desprende del contexto proporcionado. La mafia es descrita como una familia perversa y agrega que \"No hay escapatoria\" para un miembro de la familia Corleone. También se menciona que la mafia está dentro del Estado y que su directora convirtió en un modo de vida.\\n\\nAdemás, se destaca la importancia de la mafia en sus películas al ser descrita como una organización fuerte y poderosa, con prioridades en la familia y la iglesia. También se menciona que la mafia es capaz de ser a la vez manipuladora y brutal, lo que sugiere una complejidad en su naturaleza.\\n\\nEn resumen, la relación de la mafia en las películas de Scorsese parece ser fundamental, siendo descrita como una parte integral del tejido social y una forma de vida para muchos personajes.'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke(\"Que relación tiene la mafia en sus películas?\")"
    ]
   }
  ],
