--- a/rag-web.ipynb
+++ b/rag-web.ipynb
@@ -2,66 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import requests\n",
-    "# from bs4 import BeautifulSoup\n",
-    "\n",
-    "# # Extrae los párrafos de la página web\n",
-    "# def extract_paragraphs_from_web(url):\n",
-    "#     # Realizamos la solicitud HTTP a la página web\n",
-    "#     response = requests.get(url)\n",
-    "#     if response.status_code != 200:\n",
-    "#         print(f\"Error al acceder a la página: {response.status_code}\")\n",
-    "#         return []\n",
-    "\n",
-    "#     # Parseamos el contenido HTML de la página\n",
-    "#     soup = BeautifulSoup(response.text, 'html.parser')\n",
-    "    \n",
-    "#     # Buscamos el contenido principal. Modifica 'div.content' según la estructura del sitio web.\n",
-    "#     content = soup.find('div', {'class': 'content'})  \n",
-    "    \n",
-    "#     if not content:\n",
-    "#         print(\"No se pudo encontrar el contenido principal de la página.\")\n",
-    "#         return []\n",
-    "\n",
-    "#     # Extraemos los párrafos del contenido principal\n",
-    "#     paragraphs = content.find_all('p')\n",
-    "    \n",
-    "#     # Convertimos los elementos <p> a texto y eliminamos espacios innecesarios\n",
-    "#     return [paragraph.get_text(strip=True) for paragraph in paragraphs if paragraph.get_text(strip=True)]\n",
-    "\n",
-    "# # URL del artículo\n",
-    "# url = \"https://oyister.oyis.org/articles/book-review-the-stranger-by-albert-camus\"\n",
-    "\n",
-    "# # Llamada a la función\n",
-    "# web_paragraphs = extract_paragraphs_from_web(url)\n",
-    "\n",
-    "# print(web_paragraphs)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Book Review: The Stranger By Albert Camus', 'Review', 'Dec 16', 'Written By', 'Inhyuk K.', '“Maman died today. Or yesterday maybe, I don’t know. I got a telegram from the home: ‘Mother deceased. Funeral tomorrow. Faithfully yours.’ That doesn’t mean anything. Maybe it was yesterday.”', 'What an opening line.', 'The Stranger', 'written by French writer Albert Camus is a novel that is centered around the philosophical idea of existentialism.', 'It would be absurd to define existentialism in a paragraph, but here is the oversimplified summary of existentialism: the world is full of meaninglessness. There is no innate purpose or rules in our lives, and all of us are running towards the same ending: death. Existentialism says that in a meaningless world, we must make our own choices, bear responsibility for those choices, and find meaning and purpose on our own.', 'The main character of', 'The Stranger', ', Meursault, personifies existentialism. The opening line spoken by Meursault clearly shows that he does not meet societal expectations and that he is cynical about societal values because we commonly expect that one should react with sorrow to the death of the parent. Meursault is an anomaly, a stranger to society. He does not drop a tear at his own mother’s funeral and sleeps with a woman the day after the funeral. Moreover, he goes to a court and shoots an Arabian man just because the sunlight was too strong. Is he a psychopath? I thought so, but my view on Meursault changed quite a bit after finishing the book.', 'Meursault is an individual who is genuine, truthful, and free from social values. Putting aside the fact that Meursault has very little sense of ethics, I wanted to ask you:', 'How free are you from societal expectations?', 'How free are we in a society where we’re expected to talk and behave in a certain way?', 'When I finished the book, I realized that I’ve been just trying to imitate other people’s lifestyles and trying to meet the expectations of others. I was merely walking on the pathways that were given because I was afraid to be considered a', 'stranger', '. I learned that I am responsible to make decisions based on my own beliefs and values. This book inspired me to become less bound by societal expectations and to start inquiring about what kind of person I truly am.', 'If you’re interested in reading the book, it will hopefully be as thought-provoking and compelling as it was for me.', 'Inhyuk K.', 'My name is In Hyuk, and I am a writer and a podcaster for OYISTER. I enjoy synthesizing my insights in the writings which usually concern world/societal issues. As for the podcast segment named “The Conversation”, Michael and I cover world issues and review various restaurants.']\n"
+      "Se cargaron y dividieron 11 fragmentos de texto.\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "\n",
     "\n",
     "# Extrae el texto de la página web y divide cada línea en un fragmento de texto\n",
     "def extract_lines_from_web(url):\n",
-    "    # Realizamos la solicitud HTTP a la página web\n",
     "    response = requests.get(url)\n",
     "    if response.status_code != 200:\n",
     "        print(f\"Error al acceder a la página: {response.status_code}\")\n",
@@ -80,23 +39,22 @@
     "    # Extraemos todo el texto del artículo\n",
     "    full_text = content.get_text(\"\\n\", strip=True)\n",
     "    \n",
-    "    # Dividimos el texto en líneas\n",
-    "    lines = full_text.splitlines()\n",
+    "    text_splitter = RecursiveCharacterTextSplitter(chunk_size=400, chunk_overlap=20)    # Divide el texto en chunks\n",
+    "    web_texts = text_splitter.split_text(full_text)\n",
     "    \n",
-    "    # Filtramos líneas vacías y devolvemos solo las líneas no vacías\n",
-    "    return [line.strip() for line in lines if line.strip()]\n",
+    "    return web_texts\n",
     "\n",
     "\n",
     "url = \"https://oyister.oyis.org/articles/book-review-the-stranger-by-albert-camus\" \n",
     "\n",
-    "web_lines = extract_lines_from_web(url)\n",
+    "web_texts = extract_lines_from_web(url)\n",
     "\n",
-    "print(web_lines)\n"
+    "print(f\"Se cargaron y dividieron {len(web_texts)} fragmentos de texto.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,37 +65,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se creó el vector store con 11 documentos.\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_chroma import Chroma\n",
     "\n",
     "\n",
     "vector_store = Chroma.from_texts(\n",
-    "    texts=web_lines,\n",
-    "    collection_name=\"book_review\",\n",
+    "    texts=web_texts,\n",
+    "    collection_name=\"book_review2\",\n",
     "    embedding=embeddings,\n",
-    ")"
+    ")\n",
+    "print(f\"Se creó el vector store con {len(web_texts)} documentos.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_chroma import Chroma\n",
     "\n",
     "vector_store = Chroma(\n",
-    "    collection_name=\"book_review\",\n",
+    "    collection_name=\"book_review2\",\n",
     "    embedding_function=embeddings,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,45 +113,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8"
+       "5"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "question = \"Tell me about the philosophy of the book\"\n",
-    "docs = vector_store.similarity_search(question, k=8)\n",
+    "docs = vector_store.similarity_search(question, k=5)\n",
     "len(docs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(metadata={}, page_content='written by French writer Albert Camus is a novel that is centered around the philosophical idea of existentialism.'),\n",
-       " Document(metadata={}, page_content='written by French writer Albert Camus is a novel that is centered around the philosophical idea of existentialism.'),\n",
-       " Document(metadata={}, page_content='written by French writer Albert Camus is a novel that is centered around the philosophical idea of existentialism.'),\n",
-       " Document(metadata={}, page_content='. I learned that I am responsible to make decisions based on my own beliefs and values. This book inspired me to become less bound by societal expectations and to start inquiring about what kind of person I truly am.'),\n",
-       " Document(metadata={}, page_content='. I learned that I am responsible to make decisions based on my own beliefs and values. This book inspired me to become less bound by societal expectations and to start inquiring about what kind of person I truly am.'),\n",
-       " Document(metadata={}, page_content='. I learned that I am responsible to make decisions based on my own beliefs and values. This book inspired me to become less bound by societal expectations and to start inquiring about what kind of person I truly am.'),\n",
-       " Document(metadata={}, page_content='If you’re interested in reading the book, it will hopefully be as thought-provoking and compelling as it was for me.'),\n",
-       " Document(metadata={}, page_content='If you’re interested in reading the book, it will hopefully be as thought-provoking and compelling as it was for me.')]"
+       "[Document(metadata={}, page_content='The Stranger\\nwritten by French writer Albert Camus is a novel that is centered around the philosophical idea of existentialism.'),\n",
+       " Document(metadata={}, page_content='When I finished the book, I realized that I’ve been just trying to imitate other people’s lifestyles and trying to meet the expectations of others. I was merely walking on the pathways that were given because I was afraid to be considered a\\nstranger'),\n",
+       " Document(metadata={}, page_content='stranger\\n. I learned that I am responsible to make decisions based on my own beliefs and values. This book inspired me to become less bound by societal expectations and to start inquiring about what kind of person I truly am.\\nIf you’re interested in reading the book, it will hopefully be as thought-provoking and compelling as it was for me.\\nInhyuk K.'),\n",
+       " Document(metadata={}, page_content=', Meursault, personifies existentialism. The opening line spoken by Meursault clearly shows that he does not meet societal expectations and that he is cynical about societal values because we commonly expect that one should react with sorrow to the death of the parent. Meursault is an anomaly, a stranger to society. He does not drop a tear at his own mother’s funeral and sleeps with a woman the'),\n",
+       " Document(metadata={}, page_content='with a woman the day after the funeral. Moreover, he goes to a court and shoots an Arabian man just because the sunlight was too strong. Is he a psychopath? I thought so, but my view on Meursault changed quite a bit after finishing the book.')]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,16 +191,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The philosophy of the book is centered around existentialism, a philosophical idea that emphasizes individual freedom and choice. According to the context provided, this novel inspired its reader to become less bound by societal expectations and to question their own identity, suggesting that the book encourages readers to take personal responsibility for making decisions based on their own beliefs and values.'"
+       "'The philosophy presented in \"The Stranger\" by Albert Camus is centered around existentialism. This philosophical idea emphasizes individual freedom and choice, as well as personal responsibility for one\\'s actions and decisions. The main character, Meursault, embodies this philosophy through his actions and thoughts, which demonstrate a sense of detachment from societal expectations and norms.\\n\\nExistentialism suggests that people must take ownership of their lives and create their own meaning, rather than relying on external sources such as society or tradition. Camus\\' protagonist is often described as an \"anomaly\" or a \"stranger\" because he does not conform to the expected emotional responses to life\\'s events, such as crying at his mother\\'s funeral.\\n\\nThe book encourages readers to question societal expectations and values, and to explore their own beliefs and values in order to create a more authentic and meaningful life. Through Meursault\\'s character, Camus illustrates the importance of individual choice and responsibility, and the need for people to forge their own paths in life rather than following the crowd.\\n\\nOverall, \"The Stranger\" is a classic example of existentialist philosophy, exploring themes of individual freedom, personal responsibility, and the search for meaning in a seemingly indifferent world.'"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,16 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"The main character's name is Meursault, and he personifies existentialism. He is portrayed as an anomaly in society, not adhering to traditional expectations or values. Throughout the story, his actions and reactions suggest that he is cynical about societal norms and may be considered a psychopath by some standards. However, after reading the book, it seems that the author's view on Meursault has changed, indicating that there may be more depth to his character than initially meets the eye.\""
+       "\"The main character's name is Meursault. He personifies existentialism and can be described as an anomaly to societal expectations. He displays a lack of emotional response to certain situations, such as his mother's death and his own actions being considered morally questionable. Despite this, his perspective on life changes throughout the book.\""
       ]
      },
-     "execution_count": 102,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,22 +231,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"There is no information provided in the context about a review. The context only mentions four documents with identical metadata and page content ('a'). Therefore, it's not possible to form an opinion or answer a question about a review based on this context.\""
+       "'Based on the context, it seems that the reviewer, Inhyuk K., is highly impressed with the book \"The Stranger\" by Albert Camus. The tone of the review suggests that the book had a profound impact on the reviewer, inspiring them to reflect on their own values and beliefs.\\n\\nThe use of phrases such as \"thought-provoking and compelling\", \"my view on Meursault changed quite a bit after finishing the book\", and \"I am responsible to make decisions based on my own beliefs and values\" indicate that the reviewer found the book to be deeply meaningful and life-changing. The reviewer also seems to appreciate the author\\'s writing style, noting that the opening line is particularly effective.\\n\\nOverall, it appears that Inhyuk K. highly recommends \"The Stranger\" to readers who are looking for a thought-provoking and inspiring literary experience.'"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "chain.invoke(\"What do you think about the review?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"According to the context, the reviewer's name is In-Hyuk K. and he writes for OYISTER.\""
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke(\"Who is the writter of the review?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\"The Stranger\" written by Albert Camus is a novel that begins with the following line:\\n\\n“Maman died today. Or yesterday maybe, I don’t know. I got a telegram from the home: ‘Mother deceased. Funeral tomorrow. Faithfully yours.’ That doesn’t mean anything. Maybe it was yesterday.”'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.invoke(\"opening line of the book\")"
    ]
   }
  ],
